feat: update sdk from v2 to v4 for container ops (#83)